[project]
name = "rbac"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.18.4",
    "asyncpg>=0.31.0",
    "dishka>=1.9.1",
    "fastapi>=0.135.2",
    "greenlet>=3.3.2",
    "gunicorn>=25.3.0",
    "loguru>=0.7.3",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.13.1",
    "uvicorn>=0.42.0",
]

[dependency-groups]
dev = [
    "pyright>=1.1.408",
    "ruff>=0.15.7",
]

[tool.uv]
package = true

[tool.ruff]
line-length = 120
target-version = "py313"
fix = false
exclude = [".venv", "__pycache__"]

[tool.ruff.lint]
select = ["E", "F", "B", "UP", "I", "SIM", "C4", "RUF", "ANN", "N", "S", "T", "Q", "A", "R", "B9", "W", "PL", "ISC",
    "PIE", "PGH", "TID", "COM", "RET", "PTH", "G", "FA", "ERA", "TRY", "RSE", "SLF", "EXE", "NPY", "PD", "PERF", "PYI",
    "EM", "INP", "PT", "DTZ", "LOG", "BLE", "TCH", "FBT", "ASYNC", "TD"]
ignore = [
    "RUF001",
    "TRY301",
    "BLE001",
    "TD002",
    "TD003",
]
[tool.ruff.lint.flake8-bugbear]
extend-immutable-calls = ["fastapi.Depends", "fastapi.Query", "fastapi.File"]
[tool.ruff.lint.flake8-type-checking]
runtime-evaluated-base-classes = ["pydantic.BaseModel"]
[tool.ruff.lint.per-file-ignores]
"alembic/*" = ["INP001"]

[tool.pyright]
typeCheckingMode = "strict"
reportMissingTypeStubs = "none"
reportUnnecessaryIsInstance = false
pythonVersion = "3.13"
exclude = [
    ".venv",
    "**/__pycache__",
]
extraPaths = [
    "src"
]
venvPath = "."
venv = ".venv"
executionEnvironments = [
  { root = "src/rbac/di", reportUnknownVariableType = false },
]
